objects/Gong__Related_Opportunity__c.object
<CustomObject>
    <description>junction object: many to many relation call &lt;--&gt; opportunity</description>
    <fields>
        <fullName>Gong__Gong_Interaction__c</fullName>
        <label>Gong Conversation</label>
        <referenceTo>Gong__Gong_Call__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Gong_Interaction_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gong__Opportunity_Name__c</fullName>
        <formula>HYPERLINK( Gong__Related_Entity_ID__r.Id , Gong__Related_Entity_ID__r.Name , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Participants_Emails__c</fullName>
        <formula>Gong__Gong_Interaction__r.Gong__Participants_Emails__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participants Emails</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Related_Entity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Id</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Conversations</relationshipLabel>
        <relationshipName>Gong_Interaction_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Gong Related Opportunities</label>
    <nameField>
        <displayFormat>GO-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gong Related Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>